# autoresearch-llmg

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  RESEARCH-LOG.md  autoresearch-llmg.code-workspace  mars.toml  meridian.toml  program.md  pyproject.toml
.cursor/agents/: experiment-runner.md  research-lead.md
.cursor/rules/: session.mdc
for-reference/: lit-review-p2.md
legacy/karpathy/: README.md
llmg/: AUTONOMOUS-LOOP.md  DATASETS.md  EXPERIMENTS.md  README.md  ROADMAP.md  __init__.py  experiment.py  run.py
llmg/agent/: __init__.py  gemma_cache.py  gemma_loop.py  sandbox.py  search_candidates.py  state.py  tools.py  trace.py
llmg/baseline/: __init__.py  tw_matrix_run.py
llmg/data/: corpus_export.py  temporalwiki.py
llmg/eval/: temporal_metrics.py
llmg/eval/rag/: bm25.py
llmg/experiments/: registry.py
llmg/memory/: __init__.py  doc_catalog.py  fs_store.py  sqlite_store.py
llmg/observability/: __init__.py  run_session.py
llmg/runs/: README.md
llmg/search/: __init__.py  embeddings.py  harness.py  hybrid.py
llmg/train/: __init__.py  qlora.py  run_lora_eval.py  run_qlora_train.py  sft_data.py
llmg/util/: __init__.py  hf_local.py  timing.py
local-skills/research-artifacts/: SKILL.md
scripts/: analyze_agent_answers.py  audit_search_candidates.py  install-ripgrep.sh  link-meridian-llmg.sh  probe_agent_vram.py  sync.sh
tests/: test_agent_tools.py  test_corpus_export.py  test_gemma_answer.py  test_gemma_kv_cache.py  test_hf_local.py  test_lora_eval.py  test_search_candidates.py  test_sft_data.py  test_temporal_metrics.py  test_timing.py
(+82 files in other folders)
